--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.16.2",
-    "mongoose": "*" 
+    "mongoose": "*"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "pug": "^2.0.0-rc.4"
   }
 }
