--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "method-override": "^2.3.10",
     "pug": "^2.0.0-rc.4"
   }
 }
