--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.16.2",
-    "mongoose": "*"
+    "mongoose": "^4.13.9"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
